# Workspace

./: .gitignore  AGENTS.md  README.md  bootstrap.py  cody_data.db  conftest.py  context.py  design_document.md  main.py  plan_tab_state_architecture.md  pyproject.toml  query.sql  scratch.py
.agents/: design.md  tasks.md
cmd/: agent.py  clear.py  help.py  new.py  plugin.py  skill.py
config/: config.json
core/: agent.py  agent_registry.py  agents_md.py  commands.py  config.py  context_files.py  context_snippets.py  database.py  db_connections.py  events.py  inline_suggest.py  leader.py  pane_tree.py  paths.py  plugin_manager.py  project_context.py  prompt_registry.py  redaction.py  session.py  skill_package_manager.py  skills.py  stream_manager.py  terminal_passthrough.py  tools.py  vault.py
docs/: PLUGIN_SYSTEM_PLAN.md  PLUGIN_SYSTEM_PLAN_ARCHIVE.md  PROMPT_REGISTRY_PLAN.md
implementations/: css-3-tier-collection.md  event-system.md  file_browser.md  step-1-scaffolding.md  step-10-agent.md  step-11-database.md  step-12-commands.md  step-12-leader-registry.md  step-13-bootstrap.md  step-14-ui-widgets.md  step-15a-tree-content-chatpanel.md  step-15b-decouple-chat.md  step-15c-tree-css-hide-show.md  step-23-merge-plugins-into-skills.md  step-3-paths.md  step-4-config.md  step-5-vault.md  step-7-pane-tree-workspace.md  step-8-tool-registry.md  step-9-skill-system.md  step-chat-panel.md  step-sidebar.md  step-tree.md  steps-2-6-provider-base-ollama.md
plugins/: __init__.py
tests/: test_agent.py  test_agent_registry.py  test_bootstrap.py  test_chat_display.py  (+74 more)
(+210 files in other folders)
