[project]
name = "nu-cody"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=47.0.0",
    "ollama>=0.6.2",
    "pyperclip>=1.11.0",
    "textual>=8.2.5",
    "textual-terminal",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
textual-terminal = { git = "https://github.com/RhombusWeasel/textual-terminal" }
